--- a/Code/ChallengueMeli.ipynb
+++ b/Code/ChallengueMeli.ipynb
@@ -15,42 +15,37 @@
    "source": [
     "- ¿Qué problema se quiso resolver con el desarrollo de la solución?\n",
     "\n",
-    "Segmentacion Seller\n",
+    "Segmentación Seller\n",
     "- ¿Qué información buscaste y utilizaste para el desarrollo de la solución? \n",
     "\n",
-    "\n",
-    "Informacion de item detalle e item sellers\n",
+    "información de ítem detalle e ítem sellers\n",
     "- Muestra los insights más relevantes que hayas obtenido de tu análisis exploratorio.\n",
     "\n",
+    "Las categorías con mayores ventas en monto son de vestuario y calzado, computación y electrodomésticos. en general se puede observar que la primera categoría genera gran cantidad de ítems vendidos, pero con una venta promedio de venta más baja, a su vez computación tiene menos ventas, pero su venta promedio es más alta. Lo que nos dice claramente es que hay diferencias entre los ítems en precio por categoría.\n",
     "\n",
-    "Las categorias com mayores ventas en monto con de vesturio y calzado, computacion y electrodomesticos. en general se puede observar que la primera categoria genera gran cantidad de items vendidos pero con un venta promedio de venta más bajo, a su vez computación tiene menos ventas pero su venta promedio es mas alta.\n",
+    "La antigüedad de los seller influye en su venta donde se observa que para seller más antiguos (mayor a 5 años) su venta comienza a disminuir\n",
     "\n",
-    "La antiguedad de los seller influye en su venta donde se observa que para saller más antiguos (mayor a 5 años) su venta comienza a disminuir\n",
     "- Danos un contexto de la solución que escogiste, y cómo la abordaste. ¿Qué\n",
     "metodologías aplicaste? ¿Qué métricas de evaluación utilizaste?\n",
     "\n",
-    "\n",
-    "Dada la información disponible de los seller se propuso perfilar a los seller en base a modelos supervidados por tramos de segmentos,\n",
-    "sin embargo dada la poca variabilidad en la informacion no hubieron resultados esperados, es por ello que se perfilo en base a quintiles puntuando de mejor manera a aquellos que tienen mejor medidas en varibales claves para ver el buen de desempeño de un seller.\n",
-    "\n",
+    "Dada la información disponible de los seller se propuso perfilar a los sellers en base a modelos no supervisados como K-medias,\n",
+    "sin embargo dada la poca variabilidad en la información no hubieron resultados esperados, los segmentos por k-medias no separaron la población de una manera natural es por ello que se perfiló en base a quintiles puntuando de mejor manera a aquellos que tienen mejores medidas en variables claves como monto total vendido, cantidad de ítems disponibles, para ver el buen de desempeño de un seller. \n",
+    "Las ventajas de utilizar quintiles o cualquier medida de percentil, es que al analizarlo garantiza una observación directa sobre si una variable para un sellers es bajo, medio y alto, por lo cual se puede hacer una gestión en base ese estado, y potenciarlo sobre ese atributo en especial.\n",
     "\n",
     "- ¿Cuál es tu solución final? ¿Cómo se comporta? ¿Cómo soluciona o ayuda a\n",
     "solucionar el problema de negocio?\n",
     "\n",
-    "La solucion final consiste en segmentar a los sellers en base a quintiles de variables claves y luego ponderar dando mayor puntuacion a los que estan en los quintiles más altos y menor a los más bajo, de esta forma uno puede tomar disntitas estrategias segun el quintil al que este observando, por ejemplo para los quintiles más bajos es probable que tengan menos ventas o menos cantidad de item podria existir una campaña para fomentar que venda más productos, a su vez los quintiles mas altos daria incentivos para amntener su potencial. Es importante analizar la campañas/estrategias que tienen para Sellers\n",
+    "La solución final consiste en segmentar a los sellers en base a quintiles de variables claves y luego ponderar dando mayor puntuación a los que están en los quintiles más altos y menor a los más bajo, de esta forma uno puede tomar distintas estrategias según el quintil al que este observando, por ejemplo para los quintiles más bajos es probable que tengan menos ventas o menos cantidad de ítem podría existir una campaña para fomentar que venda más productos, a su vez los quintiles más altos daría incentivos para mantener su potencial. Es importante analizar las campañas/estrategias que tienen para Sellers y empezar a relacionarlas a los distintos tramos propuestos.\n",
     "\n",
     "- Concluye y plantea próximos pasos que harías después de entregar esta solución.\n",
     "\n",
     "Tratamiento de blancos y nulos\n",
     "\n",
+    "Probar quintiles por segmentos de categoría, antigüedad y localización.\n",
     "\n",
-    "Probar quintiles por segmentos de categoria y antiguedad.\n",
+    "Optimizar Código para ejecución automática y para reentreno de rangos de percentiles\n",
     "\n",
-    "\n",
-    "Optimizar codigo para ejecución automatica y para reentreno de rangos de percentiles\n",
-    "\n",
-    "\n",
-    "monitoreo de estrategias y campañas"
+    "Monitoreo de estrategias y campañas\n"
    ]
   },
   {
