--- a/Code/ChallengueMeli.ipynb
+++ b/Code/ChallengueMeli.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Optimizar Código para ejecución automática y para reentreno de rangos de percentiles\n",
     "\n",
-    "Monitoreo de estrategias y campañas\n"
+    "Monitoreo de estrategias y campañas para potenciar sellers\n"
    ]
   },
   {
